syntax = "proto3";

option go_package = "github.com/shaouai/helloworld";

package helloworld;

service Greeter {
  rpc SayHello(HelloReq) returns (HelloResp);
}

message HelloReq {
  string name = 1;
}

message HelloResp {
  string message = 1;
}